<resources>
    <string name="app_name">Laboratorio 05</string>
    <string name="login">Login</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="hint_usuario">Nombre Usuario</string>
    <string name="password">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="hint_password">Ingrese su contraseña</string>
    <string name="logo_epis_des">Este es el logo de la EPIS</string>
    <string name="ingeneria">INGENERIA</string>
    <string name="sistemas">I S T E M A S</string>
    <string name="informacion_postulante">Info. Postulante</string>
    <string name="registrar_postulante">Registrar Postulante</string>
    <string name="seleccione_menu">Seleccione una opcion</string>
    <string name="buscar">Buscar</string>
</resources>